internal/xds/translator/testdata/out/xds-ir/merge-backends-statname.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        pathSeparatedPrefix: /route-a
      name: route-a
      route:
        cluster: shared-cluster
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        pathSeparatedPrefix: /route-b
      name: route-b
      route:
        cluster: shared-cluster
        upgradeConfigs:
        - upgradeType: websocket
